<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ColorPaint</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="start_new">New</string>
<string name="brush">Brush</string>
<string name="erase">Erase</string>
<string name="save">Save</string>
<string name="paint">Paint</string>
<string name="triangle"></string>
<string name="square"></string>
<string name="circle"></string>
  <string name="pick"></string>
<string name="exit"></string>
</resources>
