<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#FF000000"
    tools:context=".MainActivity" >
    
      <com.beryl.colorpaint.DrawView
        android:id="@+id/drawing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
      
        android:background="#FF00FFFF"
        android:paddingRight="@dimen/activity_horizontal_margin" />

<LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
         >

        <ImageButton
            android:id="@+id/btnsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/save"
            android:src="@drawable/save" />

        <ImageButton
            android:id="@+id/btnclear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/erase"
            android:src="@drawable/eraser" />

        <ImageButton
            android:id="@+id/btnexit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exit"
            android:src="@drawable/exit" />
        
        <ImageButton
            android:id="@+id/btnemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exit"
            android:src="@drawable/mail" />
        
        <ImageButton
            android:id="@+id/btneraser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exit"
            android:src="@drawable/new_pic" />
        
        <ImageButton
            android:id="@+id/btngallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exit"
            android:src="@drawable/gallery" />
        
  </LinearLayout>
    
 <SlidingDrawer
     android:id="@+id/slidingDrawer1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_below="@+id/linearLayout1"
     android:allowSingleTap="true"
     android:content="@+id/slidelayout"
     android:handle="@+id/handle"
     android:orientation="horizontal"
     android:rotation="180" >
			
			<Button
			    android:id="@+id/handle"
			    android:layout_width="30dp"
			    android:layout_height="100dp"
			    android:text="+" />
			
			<LinearLayout
			    android:id="@+id/slidelayout"
			    android:layout_width="wrap_content"
			    android:layout_height="373dp"
			    android:gravity="center_vertical"
			    android:orientation="horizontal" >
			    
			   
				<!-- 
				    <LinearLayout
				        android:id="@+id/linearLayout2"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				       
				        android:orientation="horizontal" > -->
				
				        <LinearLayout
				            android:id="@+id/paint_colors"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:orientation="vertical" >
				
				            <Button
				                android:id="@+id/btnbrown"
				                android:layout_width="30dp"
				                android:layout_height="30dp"
				                android:layout_margin="2dp"
				                android:background="#FF660000"
				                android:contentDescription="@string/paint"
				                android:tag="#FF660000" />
				
				            <Button
				                android:id="@+id/btnred"
				                android:layout_width="30dp"
				                android:layout_height="30dp"
				                android:layout_margin="2dp"
				                android:background="#FFFF0000"
				                android:contentDescription="@string/paint"
				                 
				                android:tag="#FFFF0000" />
				
				            <Button
				                android:id="@+id/btnorange"
				                android:layout_width="30dp"
				                android:layout_height="30dp"
				                android:layout_margin="2dp"
				                android:background="#FFFF6600"
				                android:contentDescription="@string/paint"
				                 
				                android:tag="#FFFF6600" />
				
				            <Button
				                android:id="@+id/btnyellow"
				                android:layout_width="30dp"
				                android:layout_height="30dp"
				                android:layout_margin="2dp"
				                android:background="#FFFFCC00"
				                android:contentDescription="@string/paint"
				                 
				                android:tag="#FFFFCC00" />
				
				            <Button
				                android:id="@+id/btngreen"
				                android:layout_width="30dp"
				                android:layout_height="30dp"
				                android:layout_margin="2dp"
				                android:background="#FF009900"
				                android:contentDescription="@string/paint"
				                 
				                android:tag="#FF009900" />
				
				            <Button
				                android:id="@+id/btnlblue"
				                android:layout_width="30dp"
				                android:layout_height="30dp"
				                android:layout_margin="2dp"
				                android:background="#FF009999"
				                android:contentDescription="@string/paint"
				                 
				                android:tag="#FF009999" />
				
				        </LinearLayout>
				
				        <LinearLayout
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:orientation="vertical" >
				
				            <Button
				                android:id="@+id/btnblue"
				                android:layout_width="30dp"
				                android:layout_height="30dp"
				                android:layout_margin="2dp"
				                android:background="#FF0000FF"
				                android:contentDescription="@string/paint"
				                 
				                android:tag="#FF0000FF" />
				
				            <Button
				                android:id="@+id/btnviolet"
				                android:layout_width="30dp"
				                android:layout_height="30dp"
				                android:layout_margin="2dp"
				                android:background="#FF990099"
				                android:contentDescription="@string/paint"
				                 
				                android:tag="#FF990099" />
				
				            <Button
				                android:id="@+id/btnlilac"
				                android:layout_width="30dp"
				                android:layout_height="30dp"
				                android:layout_margin="2dp"
				                android:background="#FFFF6666"
				                android:contentDescription="@string/paint"
				                 
				                android:tag="#FFFF6666" />
				
				            <Button
				                android:id="@+id/btnwhite"
				                android:layout_width="30dp"
				                android:layout_height="30dp"
				                android:layout_margin="2dp"
				                android:background="#FFFFFFFF"
				                android:contentDescription="@string/paint"
				                 
				                android:tag="#FFFFFFFF" />
				
				            <Button
				                android:id="@+id/btngrey"
				                android:layout_width="30dp"
				                android:layout_height="30dp"
				                android:layout_margin="2dp"
				                android:background="#FF787878"
				                android:contentDescription="@string/paint"
				                 
				                android:tag="#FF787878" />
				
				            <Button
				                android:id="@+id/btnblack"
				                android:layout_width="30dp"
				                android:layout_height="30dp"
				                android:layout_margin="2dp"
				                android:background="#FF000000"
				                android:contentDescription="@string/paint"
				                 
				                android:tag="#FF000000" />
				
				     <!--    </LinearLayout> -->
			    </LinearLayout>
				        
				        <LinearLayout
				    android:id="@+id/linearLayoutb"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="vertical" >
				
				    <ImageButton
				        android:id="@+id/btnsqr"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:contentDescription="@string/square"
				        android:src="@drawable/square"
				        android:tag="@string/square" />
				
				    <ImageButton
				        android:id="@+id/btntri"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:contentDescription="@string/triangle"
				        android:src="@drawable/triangle"
				        android:tag="@string/triangle" />
				
				    <ImageButton
				        android:id="@+id/btncircle"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:contentDescription="@string/circle"
				        android:src="@drawable/circle"
				        android:tag="@string/circle" />
				    
				     <ImageButton
        android:id="@+id/btn_pick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:contentDescription="@string/pick"
		android:src="@drawable/load"
        android:tag="@string/pick" />
				</LinearLayout>
				        
		 </LinearLayout>
	</SlidingDrawer>
			      
			      
				
				
			    
			    
	<!-- 	 </LinearLayout>
	</SlidingDrawer>
     -->

</RelativeLayout>